tests/baselines/reference/stringLiteralTypesAndTuples01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesAndTuples01.ts(10,10): error TS2354: No best common type exists among return expressions.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesAndTuples01.ts (1 errors) ====
    
    // Should all be strings.
    let [hello, brave, newish, world] = ["Hello", "Brave", "New", "World"];
    
    type RexOrRaptor = "t-rex" | "raptor"
    let [im, a, dinosaur]: ["I'm", "a", RexOrRaptor] = ['I\'m', 'a', 't-rex'];
    
    rawr(dinosaur);
    
    function rawr(dino: RexOrRaptor) {
             ~~~~
!!! error TS2354: No best common type exists among return expressions.
        if (dino === "t-rex") {
            return "ROAAAAR!";
        }
        if (dino === "raptor") {
            return "yip yip!";
        }
    
        throw "Unexpected " + dino;
    }